Fixed Styling: Bottom&Top Gap of Grid

--- a/client/frontend/views/moderator/moderator-view.css
+++ b/client/frontend/views/moderator/moderator-view.css
@@ -22,15 +22,23 @@ vaadin-tabs.moderator-tabs {
   margin-right: auto;
 }
 
+div.moderator-view div:first-of-type {
+  height: 100%;
+}
+
+div.document-page {
+  display: flex;
+  flex-direction: column;
+}
+
 vaadin-button.add-teacher,
 vaadin-button.add-subject {
   margin-top: 15px;
 }
 
 /* Grid */
-vaadin-grid {
-  margin-top: 15px;
-  margin-bottom: 15px;
+vaadin-grid.moderator-grid {
+  margin-top: unset;
   flex-grow: 2;
   border: none;
 }
